src/components/OrderPage/BreadCrumbs/BreadCrumbs.scss
@import '../../../styles/variables.scss';
@import '../../../styles/_mixins.scss';

.breadcrumbs {
  border-top: 1px solid $main-grey-ligth;
  border-bottom: 1px solid $main-grey-ligth;
  &__container {
    @include horizontal-padding;
    @include fluid-container;
    padding-top: 8px;
    padding-bottom: 8px;
    overflow-x: auto;
  }
  &__list {
    margin: 0;
    padding: 0;
    // display: flex;
    // align-items: center;
    list-style: none;
    font-family: Roboto;
    font-style: normal;
    font-weight: bold;
    font-size: 14px;
    line-height: 16px;
  }
  &__item {
    display: inline-block;
    flex-shrink: 0;
  }
  &__item_available {
    color: $main-black;
  }
  &__item_active {
    color: $main-accent;
  }
  &__item_disable {
    color: $main-grey;
  }
  &__item_disable &__btn {
    cursor: default;
  }
  &__item:not(:last-child):after {
    content: '';
    background: url(../../../assets/arrow_breadcrumb.svg) center no-repeat;
    display: inline-block;
    vertical-align: middle;
    height: 6px;
    width: 38px;
  }
  &__btn {
    color: inherit;
    text-decoration: none;
    border: none;
    padding: 0;
    background-color: transparent;
    outline: none;
  }
}

// @media (max-width: $mobile) {
//   .breadcrumbs {
//     &__container {
//       overflow-x: visible;
//     }
//     &__list {
//       flex-direction: column;
//       align-items: start;
//     }
//     // &__item:after {
//     //   display: none!important;
//     // }
//   }
// }

